Match review for scouted almost figured out
- now should be able to get individual match results
- shows up on match selection screen properly
- Seemingly last thing to figure out: secondary text (one with value of top cones) isn't showing up at all, need to understand why

--- a/app/src/main/res/layout/fragment_match_scouting_main.xml
+++ b/app/src/main/res/layout/fragment_match_scouting_main.xml
@@ -60,6 +60,14 @@
                 android:src="@drawable/frc_logo"
 
                 />
+
+            <include
+                layout="@layout/fragment_summaries_data_window"
+                android:id="@+id/summary_window"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
         </LinearLayout>
 
         <Button
