--- a/app/src/main/res/layout/fragment_summaries_data_window.xml
+++ b/app/src/main/res/layout/fragment_summaries_data_window.xml
@@ -17,15 +17,6 @@
             android:textStyle="bold"
             android:text="Quick Overview" />
 
-        <!--
-         Defensive Metric
-         CS - hatches/cargo per match
-         RO - hatches/cargo per match
-         Start pos
-         End pos
-
-         -->
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -33,35 +24,59 @@
             android:textStyle="bold"
             android:text="Auto Overview" />
 
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredStartLoc-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Preferred starting location on tarmac"-->
-<!--            app:label="Preferred Starting Location" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataAutoMove-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Percentage of time robot crosses out of tarmac in auto"-->
-<!--            app:label="Leaves Tarmac in Auto Percentage" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPercentageAutoGamepieceScoredHubHighView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Average number of scored game pieces in High Hub in auto"-->
-<!--            app:label="Auto Average Scored Upper" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPercentageAutoGamepieceScoredHubLowView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Average number of scored game pieces in Low Hub in auto"-->
-<!--            app:label="Auto Average Scored Lower" />-->
-
         <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoTopCones
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Amount of top cones scored"
+            app:explanation="Amount of top cones scored in auton"
             app:label="Top Cones" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoMiddleCones
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Amount of middle cones scored in auton"
+            app:label="Middle Cones" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoBottomCones
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Amount of bottom cones scored in auton"
+            app:label="Bottom Cones" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoTopCubes
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Amount of top cubes scored in auton"
+            app:label="Top Cubes" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoMiddleCubes
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Amount of middle cubes scored in auton"
+            app:label="Middle Cubes" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoBottomCubes
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="Amount of bottom cubes scored in auton"
+            app:label="Bottom Cubes" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoDocked
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="If robot ended auton unbalanced on charge station"
+            app:label="Docked" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoBalanced
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="If robot ended auton balanced on charge station"
+            app:label="Balanced" />
+
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataAutoCrossedLine
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:explanation="If robot crossed line during auton"
+            app:label="Crossed Line" />
 
         <TextView
             android:layout_width="match_parent"
@@ -70,151 +85,55 @@
             android:textStyle="bold"
             android:text="Tele Overview" />
 
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPercentageGamePiecesScoredHubHighView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Average and percentage made for ALL shots (defended or not) at High Hub"-->
-<!--            app:label="Scored when Targeting Hub Upper" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPercentageGamePiecesScoredHubLowView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Average and percentage made for ALL shots (defended or not) at Low Hub"-->
-<!--            app:label="Scored when Targeting Hub Lower" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredEndLoc-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Preferred climb level on rungs"-->
-<!--            app:label="Preferred Climb Height" />-->
-
-        <!-- <org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredEndLoc
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleTopCones
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Time taken to climb to max"
-            app:label="Estimated Max Climb Time" /> -->
+            app:explanation="Amount of top cones scored in tele"
+            app:label="Top Cones" />
 
-        <!--
-        <org.wildstang.wildrank.androidv2.views.data.MatchDataEndgameIssues
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleMiddleCones
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Percentage of instances where problems occurred in the endgame (Climbs/Falls)"
-            app:label="Issues on Climb" /> -->
+            app:explanation="Amount of middle cones scored in tele"
+            app:label="Middle Cones" />
 
-        <!--<TextView
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleBottomCones
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:text="Compatibility Overview " />-->
+            app:explanation="Amount of bottom cones scored in tele"
+            app:label="Bottom Cones" />
 
-        <!--
-         Auto compatibility (All bot)
-         Teleop Compatibility (Offense bot)
-         Endgame Compatibility (Offense bot)
-         Auto compatibility (Defense bot)
-         Endgame Compatibility (Defense bot)
-         -->
-
-        <!--
-        <org.wildstang.wildrank.androidv2.views.data.MatchDataAutoSummarizeCompatability
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleTopCubes
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="The percentage of time this robot demonstrates compatibility with autonomous strategy - Cross auto line, No intra-team contact, Place 1+ gamepieces"
-            app:label="Auto Strategy Compatibility" />
-            -->
+            app:explanation="Amount of top cubes scored in tele"
+            app:label="Top Cubes" />
 
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="25sp"-->
-<!--            android:textStyle="bold"-->
-<!--            android:text="Cycle Statistics" />-->
-
-<!--            <org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredSuccessfulScoringRegion-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Where the Scoring is comming from: on the tarmacs or outside of them"-->
-<!--            app:label="Most Common Scoring Location" />-->
-
-        <!--<org.wildstang.wildrank.androidv2.views.data.MatchDataPercentageGamePiecesScoredView
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleMiddleCubes
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Calculated as 100% minus the percentage of all abandoned gamepieces divided by all attempts"
-            app:label="Percentage of Gamepieces Scored" /> -->
+            app:explanation="Amount of middle cubes scored in tele"
+            app:label="Middle Cubes" />
 
-
-
-
-        <!--<TextView
-            android:id="@+id/robotPositioning"
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataTeleBottomCubes
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:text="Robot Positioning (Auto)" />
+            app:explanation="Amount of bottom cubes scored in tele"
+            app:label="Bottom Cubes" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textStyle="bold"
-            android:text="Positions" />
+            android:text="End Overview" />
 
-        <org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredStartLoc
+        <org.wildstang.wildrank.androidv2.views.data.charged_up.MatchDataEndChargePlatform
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:explanation="Preferred starting location on tarmack"
-            app:label="Preferred Starting Location" /> -->
+            app:explanation="Where the robot was at the end of the match"
+            app:label="End Charge Platform" />
 
-        <!--<org.wildstang.wildrank.androidv2.views.data.MatchDataAutoMove
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Percentage of time crossing out of auto zone"
-            app:label="Auto Move %" /> -->
-
-        <!--<org.wildstang.wildrank.androidv2.views.data.MatchDataPreferredEndLoc
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:explanation="Preferred climb level on Hab"
-            app:label="Preferred Climb Height" /> -->
-
-<!--        <TextView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="25sp"-->
-<!--            android:textStyle="bold"-->
-<!--            android:text="Match Maximums" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataMaxAutoHighView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Max demonstrated shots in Auto - Upper Hub"-->
-<!--            app:label="Maximum Auto Upper Hub" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataMaxAutoLowView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Max demonstrated shots in Auto - Lower Hub"-->
-<!--            app:label="Maximum Auto Lower Hub" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataMaxGamePiecesScoredHubHighView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Max demonstrated shots in Tele - Upper Hub"-->
-<!--            app:label="Maximum Tele Upper Hub" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataMaxEndLocView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Max demonstrated climb level on rungs"-->
-<!--            app:label="Maximum Demonstrated Climb Height" />-->
-
-<!--        <org.wildstang.wildrank.androidv2.views.data.MatchDataMaxEndLocAttemptView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            app:explanation="Max attempted climb level on rungs, if this is greater than demonstrated climb they probably fell off a higher rung"-->
-<!--            app:label="Maximum Attempted Climb Height" />-->
     </LinearLayout>
 
 </ScrollView>
