Fixed and updated team summaries

--- a/app/src/main/res/layout/fragment_summaries_data_window.xml
+++ b/app/src/main/res/layout/fragment_summaries_data_window.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:text="Quick Overview" />
+            android:text="Match Overview" />
 
         <TextView
             android:layout_width="match_parent"
