--- a/app/src/main/res/layout/fragment_scout_autonomous.xml
+++ b/app/src/main/res/layout/fragment_scout_autonomous.xml
@@ -4,8 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#292929">
+    android:background="#FFB600">
 
+    <TextView
+        android:id="@+id/AutoTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Autonomous"
+        android:textSize="60sp"
+        android:textColor="#FFFFFF"
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:id="@+id/ConeCouters"
@@ -57,15 +65,15 @@
 
     </LinearLayout>
 
-<LinearLayout
-    android:id="@+id/Center"
-    android:layout_width="200dp"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:layout_marginTop="95dp"
+    <LinearLayout
+        android:id="@+id/Center"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="95dp"
     >
     <TextView
         android:id="@+id/top"
@@ -99,7 +107,7 @@
         android:gravity="center_horizontal|center_vertical"
         android:layout_marginTop="50dp"
         />
-</LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/CubeCouters"
         android:layout_width="500dp"
