--- a/app/src/main/res/layout/fragment_scout_teleop.xml
+++ b/app/src/main/res/layout/fragment_scout_teleop.xml
@@ -6,6 +6,15 @@
     android:orientation="vertical"
     android:background="#292929">
 
+    <TextView
+        android:id="@+id/TeleTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Teleop"
+        android:textSize="60sp"
+        android:textColor="#FFFFFF"
+        android:layout_centerHorizontal="true" />
+
     <LinearLayout
         android:id="@+id/ConeCouters"
         android:layout_width="500dp"
@@ -31,7 +40,7 @@
             android:id="@+id/ConeTop"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="37dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_top_cones" />
@@ -40,7 +49,7 @@
             android:id="@+id/ConeMiddle"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_middle_cones"/>
@@ -49,7 +58,7 @@
             android:id="@+id/ConeBottom"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_bottom_cones"/>
@@ -124,7 +133,7 @@
             android:id="@+id/CubesTop"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="37dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_top_cubes"/>
@@ -133,7 +142,7 @@
             android:id="@+id/CubesMiddle"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_middle_cubes"/>
@@ -142,7 +151,7 @@
             android:id="@+id/CubesBottom"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
             app:key="tele_bottom_cubes"/>
