--- a/app/src/main/res/layout/custom_view_note.xml
+++ b/app/src/main/res/layout/custom_view_note.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -61,8 +62,8 @@
         android:id="@+id/note"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
         android:layout_below="@id/border"
+        android:layout_alignParentBottom="true"
         android:layout_toRightOf="@id/midborder"
         android:inputType="textMultiLine"
         android:scrollbars="vertical" />
