--- a/app/src/main/res/layout/fragment_notes_main.xml
+++ b/app/src/main/res/layout/fragment_notes_main.xml
@@ -48,7 +48,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:scrollbars="vertical">
+                android:scrollbars="vertical"
+                android:layout_marginLeft="25dp"
+                >
 
                 <TextView
                     android:id="@+id/scouting_teams"
