--- a/app/src/main/res/values/strings_scouting.xml
+++ b/app/src/main/res/values/strings_scouting.xml
@@ -8,12 +8,18 @@
         <item>2</item>
     </string-array>
 
-    <string-array name="climb_level">
+    <string-array name="staging">
         <item>1. Not Parked</item>
         <item>2. Parked</item>
-        <item>3. Charge Pad Tipped</item>
-        <item>4. Charge Pad Engaged</item>
-        <!--<item>4</item>-->
+        <item>3. Onstage</item>
+        <item>4. Onstage Harmony</item>
+    </string-array>
+
+    <string-array name="high_notes">
+        <item>\t\t0\t\t</item>
+        <item>\t\t1\t\t</item>
+        <item>\t\t2\t\t</item>
+        <item>\t\t3\t\t</item>
     </string-array>
 
     <string-array name="auto_step">
