--- a/app/src/main/res/layout/fragment_scout_teleop.xml
+++ b/app/src/main/res/layout/fragment_scout_teleop.xml
@@ -16,114 +16,91 @@
         android:layout_centerHorizontal="true" />
 
     <LinearLayout
-        android:id="@+id/ConeCouters"
-        android:layout_width="500dp"
+        android:id="@+id/MadeMissed"
+        android:layout_width="440dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="35dp"
-        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="100dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Made"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:gravity="center_horizontal"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Missed"
+            android:textSize="30sp"
+            android:textColor="@color/white"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="90dp"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/Amps"
+        android:layout_width="440dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="50dp"
 
         >
 
         <TextView
-            android:id="@+id/cones"
-            android:layout_width="111dp"
+            android:id="@+id/amps_made"
+            android:layout_width="wrap_content"
             android:layout_height="42dp"
-            android:text="Cones"
+            android:text="Amp"
             android:textSize="35sp"
             android:textColor="#FFFFFF"
             android:gravity="center_horizontal|top" />
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/ConeTop"
-            android:layout_width="440dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="37dp"
-            android:background="#D9D9D9"
-            android:orientation="vertical"
-            app:key="tele_top_cones" />
-
-        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/ConeMiddle"
+            android:id="@+id/MadeAmps"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_middle_cones"/>
+            app:key="tele_made_amps" />
+
 
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/ConeBottom"
+            android:id="@+id/MissedAmps"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:background="#D9D9D9"
-            android:orientation="vertical"
-            app:key="tele_bottom_cones"/>
+            android:layout_marginTop="50dp"
+            app:key="tele_missed_amps"
+/>
 
     </LinearLayout>
 
+
     <LinearLayout
-        android:id="@+id/Center"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="95dp"
-        >
-        <TextView
-            android:id="@+id/top"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Top"
-            android:textSize="35sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal|center_vertical"
-
-            />
-
-        <TextView
-            android:id="@+id/middle"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Middle"
-            android:textSize="35sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="50dp"
-            />
-
-        <TextView
-            android:id="@+id/bottom"
-            android:layout_width="200dp"
-            android:layout_height="75dp"
-            android:text="Bottom"
-            android:textSize="35sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="50dp"
-            />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/CubeCouters"
+        android:id="@+id/Speaker"
         android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="100dp"
         android:layout_alignParentEnd="true"
         >
         <TextView
-            android:id="@+id/cubes"
-            android:layout_width="111dp"
+            android:id="@+id/SpeakerText"
+            android:layout_width="wrap_content"
             android:layout_height="42dp"
-            android:text="Cubes"
+            android:text="Speaker"
             android:textSize="35sp"
             android:textColor="#FFFFFF"
             android:gravity="center_horizontal|top"
@@ -133,29 +110,53 @@
             android:id="@+id/CubesTop"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="37dp"
-            android:background="#D9D9D9"
-            android:orientation="vertical"
-            app:key="tele_top_cubes"/>
-
-        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/CubesMiddle"
-            android:layout_width="440dp"
-            android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_middle_cubes"/>
-
+            app:key="tele_speaker_counter"
+            />
         <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
-            android:id="@+id/CubesBottom"
+            android:id="@+id/Speaker_Missed"
             android:layout_width="440dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:background="#D9D9D9"
             android:orientation="vertical"
-            app:key="tele_bottom_cubes"/>
+            app:key="tele_missed_speaker"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/Traps"
+        android:layout_width="500dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        android:layout_below="@id/Amps"
+        android:layout_centerHorizontal="true"
+        >
+        <TextView
+            android:id="@+id/TrapText"
+            android:layout_width="wrap_content"
+            android:layout_height="42dp"
+            android:text="Trap"
+            android:textSize="35sp"
+            android:textColor="#FFFFFF"
+            android:gravity="center_horizontal|top"
+            />
+
+        <org.wildstang.wildrank.androidv2.views.scouting.ScoutingCounterView
+            android:id="@+id/TrapCounter"
+            android:layout_width="440dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="#D9D9D9"
+            android:orientation="vertical"
+            app:key="tele_speaker_counter"
+            />
 
     </LinearLayout>
+
 
 </RelativeLayout>
