--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="material_blue_dark">#1976D2</color>
     <color name="StrykeForce">#f2bb16</color>
     <color name="black_tint">#CC000000</color>
+    <color name="button_tint">#48D3D3D3</color>
 </resources>
